# compare-ia-summary

./: .gitignore  pyproject.toml  test_gemini_evaluation.py  test_summary_evaluation.py  test_summary_evalution.py  utils.py
fixtures/summarization_data/: template.json
