[project]
name = "hack-day-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "DWalterJansen",email = "davidwalterjansengithub@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk (>=3.8.1)",
    "rouge-score (>=0.1.2)",
    "scikit-learn (>=1.3.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "python-dotenv (>=1.0.0)",
    "transformers (>=4.30.0)",
    "torch (>=2.0.0)",
    "numpy (>=1.24.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["RUF", "I", "PL", "F", "COM", "UP", "DJ", "T10", "T20", "DTZ", "SIM", "TID", "PTH", "ERA", "TRY"]
ignore = ["COM812", "PLR2004", "PLR0911", "PLR0912", "PLR0913", "DJ001", "DJ001", "DJ008", "TRY003", "RUF012"]



